[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
    "pybind11[global]",
]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "mpi4py>=2.0.0,<4.0",
    "numpy",
    "scipy",
    "dill",
    "sympy",
    "scikit-learn",
    "smcpy",
    "pybind11[global]",
]

[project.optional-dependencies]
ONNX = ["onnx"]
TESTS = [
    "pytest",
    "pytest-mock",
    "pytest-timeout",
    "pytest-cov",
    "coverage",
    "coveralls"
]

[tool.cibuildwheel]
skip = "pp*"